# smartopol-ai

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SUMMARY.md  TASKLIST.md  docker-compose.yml  docker-setup.sh  install.sh  setup.sh
.githooks/: pre-push
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-release.yml  release.yml
skynet/: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  SOUL.md
skynet/config/: SOUL.template.md  default.toml
skynet/config/templates/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
skynet/crates/skynet-agent/: Cargo.toml
skynet/crates/skynet-agent/src/: anthropic.rs  anthropic_stream.rs  bedrock.rs  claude_cli.rs  copilot.rs  health.rs  lib.rs  ollama.rs  openai.rs  prompt.rs  provider.rs  qwen_oauth.rs  registry.rs  router.rs  runtime.rs  stream.rs  thinking.rs  vertex.rs
skynet/crates/skynet-agent/src/pipeline/: compact.rs  context.rs  mod.rs  process.rs  slash.rs
skynet/crates/skynet-agent/src/tools/: bash_session.rs  build.rs  execute_command.rs  knowledge.rs  link_identity.rs  list_files.rs  mod.rs  patch_file.rs  read_file.rs  reminder.rs  script_tool.rs  search_files.rs  send_message.rs  skill.rs  tool_loop.rs  write_file.rs
skynet/crates/skynet-channels/: Cargo.toml
skynet/crates/skynet-channels/src/: channel.rs  error.rs  lib.rs  manager.rs  types.rs
skynet/crates/skynet-core/: Cargo.toml
skynet/crates/skynet-core/src/: config.rs  error.rs  lib.rs  reminder.rs  types.rs  update.rs
skynet/crates/skynet-discord/: Cargo.toml
skynet/crates/skynet-discord/src/: ack.rs  adapter.rs  attach.rs  commands.rs  compact.rs  context.rs  embed.rs  error.rs  handler.rs  lib.rs  proactive.rs  send.rs  tools.rs  voice.rs
skynet/crates/skynet-gateway/: Cargo.toml  build.rs
skynet/crates/skynet-gateway/src/: app.rs  main.rs  mcp_bridge.rs  mcp_lifecycle.rs  stop.rs  tools.rs  update.rs
skynet/crates/skynet-gateway/src/auth/: mod.rs
skynet/crates/skynet-gateway/src/http/: chat.rs  health.rs  mod.rs  notifications.rs  openai_compat.rs  ui.rs  webhooks.rs
skynet/crates/skynet-gateway/src/ws/: broadcast.rs  connection.rs  dispatch.rs  handlers.rs  handshake.rs  message.rs  mod.rs  send.rs
skynet/crates/skynet-gateway/static/: index.html
skynet/crates/skynet-hooks/: Cargo.toml
skynet/crates/skynet-hooks/src/: engine.rs  error.rs  lib.rs  types.rs
skynet/crates/skynet-memory/: Cargo.toml
skynet/crates/skynet-memory/src/: db.rs  error.rs  lib.rs  manager.rs  types.rs
skynet/crates/skynet-protocol/: Cargo.toml
skynet/crates/skynet-protocol/src/: frames.rs  handshake.rs  lib.rs  methods.rs
skynet/crates/skynet-protocol/tests/: wire_compat.rs
skynet/crates/skynet-scheduler/: Cargo.toml
skynet/crates/skynet-scheduler/src/: db.rs  engine.rs  error.rs  lib.rs  schedule.rs  types.rs
skynet/crates/skynet-sessions/: Cargo.toml
skynet/crates/skynet-sessions/src/: db.rs  error.rs  lib.rs  manager.rs  types.rs
skynet/crates/skynet-telegram/: Cargo.toml
skynet/crates/skynet-telegram/src/: adapter.rs  allow.rs  attach.rs  context.rs  error.rs  handler.rs  lib.rs  proactive.rs  send.rs  tools.rs  typing.rs
skynet/crates/skynet-terminal/: Cargo.toml
skynet/crates/skynet-terminal/src/: error.rs  lib.rs  manager.rs  safety.rs  session.rs  truncate.rs  types.rs
skynet/crates/skynet-users/: Cargo.toml
skynet/crates/skynet-users/src/: db.rs  error.rs  identity.rs  lib.rs  permissions.rs  resolver.rs  types.rs
skynet/docs/: api-reference.md  architecture.md  concurrency.md  discord.md  docker.md  getting-started.md  knowledge-base.md  plugins.md  providers.md  scheduled-reminders.md  self-update.md  setup-guide.md  shared-message-pipeline.md  skills.md  unified-brain.md
skynet/scripts/ci/: quality_gate.sh
