[package]
name = "skynet-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
hooks = ["dep:skynet-hooks"]

[dependencies]
skynet-core      = { path = "../skynet-core" }
skynet-hooks     = { path = "../skynet-hooks", optional = true }
skynet-memory    = { path = "../skynet-memory" }
skynet-scheduler = { path = "../skynet-scheduler" }
skynet-terminal  = { path = "../skynet-terminal" }
skynet-users     = { path = "../skynet-users" }
dashmap        = { workspace = true }
tokio          = { workspace = true }
reqwest        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }
thiserror      = { workspace = true }
futures-util   = { workspace = true }
async-trait    = { workspace = true }
tokio-stream   = { workspace = true }
uuid           = { workspace = true }
chrono         = { workspace = true }
hmac           = { workspace = true }
sha2           = { workspace = true }
hex            = { workspace = true }
tokio-util     = { workspace = true }
ring           = "0.17"
base64         = "0.22"
urlencoding    = "2"
toml           = "0.8"
serde_yaml     = "0.9"
tempfile        = "3"

[dev-dependencies]
