[package]
name = "skynet-channels"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
skynet-core = { path = "../skynet-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
