[package]
name = "skynet-discord"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
skynet-core  = { path = "../skynet-core" }
skynet-agent = { path = "../skynet-agent" }
skynet-memory = { path = "../skynet-memory" }

serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio       = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
chrono      = { workspace = true }
