[package]
name = "skynet-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "skynet-gateway"
path = "src/main.rs"

[dependencies]
skynet-core = { path = "../skynet-core" }
skynet-protocol = { path = "../skynet-protocol" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
