[package]
name = "skynet-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
skynet-core = { path = "../skynet-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
