[package]
name = "skynet-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
skynet-core = { path = "../skynet-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
