[package]
name = "skynet-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
skynet-core = { path = "../skynet-core" }
rusqlite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
