[package]
name    = "skynet-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
skynet-core   = { path = "../skynet-core" }
skynet-agent  = { path = "../skynet-agent" }
skynet-memory = { path = "../skynet-memory" }
skynet-users  = { path = "../skynet-users" }

teloxide    = { version = "0.13", features = ["macros"] }
tokio       = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
chrono      = { workspace = true }
reqwest     = { workspace = true }
base64      = "0.22"
