[package]
name = "skynet-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
skynet-core = { path = "../skynet-core" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
portable-pty = "0.8"
strip-ansi-escapes = "0.2"
libc = "0.2"
